--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,28 @@
-.start {
-    color: blue;
+a {
+    text-decoration: none;
+}
+
+ul,
+ol {
+    list-style: none;
+    padding: 0px;
+    margin: 0px;
+}
+
+h1,
+h2,
+h3,
+p {
+    margin: 0px;
+}
+
+p {
+    padding: 0px;
+    margin: 0px;
+}
+
+img {
+    display: block;
+    margin: 0px;
+    padding: 0px;
 }
